--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -3588,7 +3588,7 @@ msgid ""
 "gennemskue, hvordan medarbejdere i Aarhus Kommune har anvendt en given "
 "AI-løsning, og den måde nået frem til et resultat.</p><p>I svaret "
 "skal der redegøres for, om og hvordan løsningen har indbygget "
-"muligheden for menneskelig verififikation af output.</p>'\n"
+"muligheden for menneskelig verifikation af output.</p>'\n"
 "    "
 "'#help_display': element_before\n"
 "    '#allowed_formats':\n"
@@ -3814,7 +3814,7 @@ msgid ""
 "mindst under træning, og vand til køling. Det er derfor vigtigt, at "
 "løsningernes ressourceforbrug står mål med de forventede udbytter, "
 "og at løsningerne i øvrigt er tilrettelagt ud fra en "
-"ressourceoptimerende tilgang (eks. krav til grøn strøm og "
+"ressourceoptimerende tilgang (f.eks. krav til grøn strøm og "
 "genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres "
 "for, om det er overvejet at anvende mindre ressourcekrævende "
 "løsinger end AI til indfrielse af screeningens formål.</p>'\n"
@@ -4256,7 +4256,7 @@ msgid ""
 "ikke indgår artikel 9/10 oplysninger i en AI-behandling, skal vi "
 "være særligt opmærksomme på at output ikke medfører, at man (med "
 "en høj grad af sikkerhed) kan udlede artikel 9/10 oplysninger om de "
-"registrerede . Hvis man kan udlede særlige personoplysninger, så "
+"registrerede. Hvis man kan udlede særlige personoplysninger, så "
 "skal løsningen (trods den kun behandler almindelige "
 "personoplysninger) betragtes som behandlende særlige kategorier. Det "
 "øger kravene til hjemmel, jf. grundlæggende behandlingsforbud for "
@@ -4292,7 +4292,7 @@ msgid ""
 "class=\"task\"><p><h5>Opgave</h5></p><p>Såfremt oplysninger fra "
 "patientjournaler skal anvendes til AI, skal dette ske på baggrund af "
 "enten et sundhedsfagligt samtykke, sundhedslovens §42d, stk. 2, nr. 2 "
-"eller §46 (kun til forskning ). Anvendelse af journaloplysninger skal "
+"eller §46 (kun til forskning). Anvendelse af journaloplysninger skal "
 "juridisk- og ledelsesmæssig godkendes (regionsrådsgodkendelse jf "
 "sundhedsloven). Journaloplysninger må ikke anvendes til AI i "
 "forbindelse med aktuel behandling af patienten, og formål der ikke er "
@@ -4307,7 +4307,7 @@ msgid ""
 "grundlæggende rettigheder (højrisiko AI-systemer)?'\n"
 "    "
 "'#text_yes': '<div class=\"task\"><p><h5>Opgave</h5></p><ol><li>Der "
-"skal sikres, at der<br>oprettes og løbende evalueres via et "
+"skal sikres, at der oprettes og løbende evalueres via et "
 "risikostyringssystem</li><li>foretages datastyring i forbindelse "
 "trænings-, validerings- og prøvningsdatatsæt</li><li>udarbejdes "
 "teknisk dokumentation forinden ibrugtagning</li><li>foretages logning "
@@ -4356,4 +4356,3 @@ msgid ""
 " "
 "         value: '0'"
 msgstr ""
-
