--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -3318,7 +3318,7 @@ msgid ""
 "    '#type': "
 "ai_screening_weighted_radios\n"
 "    '#title': 'Hvor stor er "
-"screeningsorganisationen?'\n"
+"projektorganisationen?'\n"
 "    '#options':\n"
 "      '10,0': '1-5 "
 "personer'\n"
@@ -3351,7 +3351,7 @@ msgid ""
 "    "
 "'#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvad er den "
-"geografiske distribution af screeningsorganisationen?'\n"
+"geografiske distribution af projektorganisationen?'\n"
 "    "
 "'#options':\n"
 "      '10,0': 'Samme bygning'\n"
@@ -3368,7 +3368,7 @@ msgid ""
 "   "
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Har "
-"screeningsorganisationen erfaring med de involverede teknologier?'\n"
+"projektorganisationen erfaring med de involverede teknologier?'\n"
 "  "
 "  '#options':\n"
 "      '10,0': 'Etablerede eksperter'\n"
@@ -3387,7 +3387,7 @@ msgid ""
 "   "
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvilke "
-"organisatoriske afhængigheder er der i screeningsafviklingen?'\n"
+"organisatoriske afhængigheder er der i projektafviklingen?'\n"
 "    "
 "'#options':\n"
 "      '10,0': Ingen\n"
@@ -3404,7 +3404,7 @@ msgid ""
 "  "
 "  '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvilke "
-"tekniske afhængigheder er der i screeningsafviklingen?'\n"
+"tekniske afhængigheder er der i projektafviklingen?'\n"
 "    "
 "'#options':\n"
 "      '10,0': Ingen\n"
@@ -3469,7 +3469,7 @@ msgid ""
 " "
 "   '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvor lang "
-"tid vil screeningen formodentligt strække sig over?'\n"
+"tid vil projektet formodentligt strække sig over?'\n"
 "    "
 "'#options':\n"
 "      '0,10': '0-6 uger'\n"
