--- a/translations/contrib-translations.da.po
+++ b/translations/contrib-translations.da.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2026-01-28 14:12+0100\n"
-"PO-Revision-Date: 2026-01-28 14:12+0100\n"
+"POT-Creation-Date: 2026-02-16 13:35+0100\n"
+"PO-Revision-Date: 2026-02-16 13:35+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -948,3 +948,6 @@ msgid ""
 "Public screenings can be <em>viewed by all users</em>. Non-public "
 "screenings can be viewed by editors only."
 msgstr "👀"
+
+msgid "Show all screenings"
+msgstr "Vis alle screeninger"
