--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2026-02-16 11:16+0100\n"
-"PO-Revision-Date: 2026-02-16 11:16+0100\n"
+"POT-Creation-Date: 2026-02-16 13:43+0100\n"
+"PO-Revision-Date: 2026-02-16 13:43+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -3334,7 +3334,7 @@ msgid ""
 "   "
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Hvor stor er "
-"screeningens indflydelse på forretningsstrategiske mål?'\n"
+"projektets indflydelse på forretningsstrategiske mål?'\n"
 "    "
 "'#options':\n"
 "      '10,0': Uvæsentlig\n"
@@ -3369,19 +3369,18 @@ msgid ""
 " '#type': ai_screening_weighted_radios\n"
 "    '#title': 'Har "
 "projektorganisationen erfaring med de involverede teknologier?'\n"
-"  "
-"  '#options':\n"
-"      '10,0': 'Etablerede eksperter'\n"
-"      '7,0': "
-"'Har gennemført screeninger med samme teknologi med ekstern "
-"bistand'\n"
-"      '5,0': 'Har gennemført pilotforløb med "
-"teknologien'\n"
-"      '3,0': 'Har arbejdet med lignende teknologier'\n"
-" "
-"     '1,0': 'Ingen erfaring med teknologien'\n"
 "    "
-"'#options__properties': ''\n"
+"'#options':\n"
+"      '10,0': 'Etablerede eksperter'\n"
+"      '7,0': 'Har "
+"gennemført screeninger med samme teknologi med ekstern bistand'\n"
+"    "
+"  '5,0': 'Har gennemført pilotforløb med teknologien'\n"
+"      '3,0': "
+"'Har arbejdet med lignende teknologier'\n"
+"      '1,0': 'Ingen erfaring "
+"med teknologien'\n"
+"    '#options__properties': ''\n"
 "  "
 "hvilke_organisatoriske_afhaengigheder_er_der_i_projektafviklinge:\n"
 "   "
@@ -3484,7 +3483,7 @@ msgid ""
 "hvordan_er_projektet_scopet:\n"
 "    '#type': "
 "ai_screening_weighted_radios\n"
-"    '#title': 'Hvordan er screeningen "
+"    '#title': 'Hvordan er projektet "
 "scopet?'\n"
 "    '#options':\n"
 "      '0,10': 'Klar og velstruktureret "
@@ -4256,13 +4255,13 @@ msgid ""
 "ikke indgår artikel 9/10 oplysninger i en AI-behandling, skal vi "
 "være særligt opmærksomme på at output ikke medfører, at man (med "
 "en høj grad af sikkerhed) kan udlede artikel 9/10 oplysninger om de "
-"registrerede. Hvis man kan udlede særlige personoplysninger, så "
-"skal løsningen (trods den kun behandler almindelige "
-"personoplysninger) betragtes som behandlende særlige kategorier. Det "
-"øger kravene til hjemmel, jf. grundlæggende behandlingsforbud for "
-"artikel 9 oplysninger, hvorfor en undtagelseshjemmel skal "
-"findes</p></div>'\n"
-"    '#states':\n"
+"registrerede. Hvis man kan udlede særlige personoplysninger, så skal "
+"løsningen (trods den kun behandler almindelige personoplysninger) "
+"betragtes som behandlende særlige kategorier. Det øger kravene til "
+"hjemmel, jf. grundlæggende behandlingsforbud for artikel 9 "
+"oplysninger, hvorfor en undtagelseshjemmel skal findes.</p></div>'\n"
+"  "
+"  '#states':\n"
 "      visible:\n"
 "        "
 "':input[name=\"indgaar_der_personoplysninger_i_loesning\"]':\n"
@@ -4356,3 +4355,4 @@ msgid ""
 " "
 "         value: '0'"
 msgstr ""
+
