--- a/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2026-01-28 10:06+0100\n"
-"PO-Revision-Date: 2026-01-28 10:06+0100\n"
+"POT-Creation-Date: 2026-02-17 11:03+0100\n"
+"PO-Revision-Date: 2026-02-17 11:03+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -82,3 +82,5 @@ msgid_plural "Screenings that do not comply to the demands for use"
 msgstr[0] ""
 msgstr[1] ""
 
+msgid "Department"
+msgstr "Magistratsafdeling"
