--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2026-02-16 13:43+0100\n"
-"PO-Revision-Date: 2026-02-16 13:43+0100\n"
+"POT-Creation-Date: 2026-02-17 10:58+0100\n"
+"PO-Revision-Date: 2026-02-17 10:58+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -109,8 +109,8 @@ msgid "Off"
 msgstr ""
 
 msgctxt "core.base_field_override.node.project.title:label"
-msgid "Title"
-msgstr ""
+msgid "Name"
+msgstr "Navn"
 
 msgctxt "core.base_field_override.node.static.promote:label"
 msgid "Forfremmet til forside"
