--- a/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
@@ -65,22 +65,22 @@ msgid "Press to select"
 msgstr "Tryk for at vælge"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:18
-msgid "Project that complies to all demands for use"
+msgid "Screening that complies to all demands for use"
 msgid_plural "Screenings that comply to all demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Screening der opfylder alle krav til brug"
+msgstr[1] "Screeninger der opfylder alle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:28
-msgid "Project that complies to some demands for use"
+msgid "Screening that complies to some demands for use"
 msgid_plural "Screenings that comply to some demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Screening der opfylder nogle krav til brug"
+msgstr[1] "Screeninger der opfylder nogle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:38
-msgid "Project that does not comply to the demands for use"
+msgid "Screening that does not comply to the demands for use"
 msgid_plural "Screenings that do not comply to the demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Screening der ikke opfylder kravene til brug"
+msgstr[1] "Screeninger der ikke opfylder kravene til brug"
 
 msgid "Department"
 msgstr "Magistratsafdeling"
