--- a/config/sync/language/da/core.entity_form_display.node.project.default.yml
+++ b/config/sync/language/da/core.entity_form_display.node.project.default.yml
@@ -1,6 +1,6 @@
 third_party_settings:
   field_group:
     group_project_information:
-      label: Screeningsinformation
+      label: Projektinformation
     group_state:
       label: Tilstand
