--- a/config/sync/language/da/field.field.node.project.field_department.yml
+++ b/config/sync/language/da/field.field.node.project.field_department.yml
@@ -1,2 +1,2 @@
 label: Magistrat
-description: "Hvilken magistratsafdeling hører screeningen under"
+description: "Hvilken magistratsafdeling hører projektet under"
