--- a/config/sync/language/da/group.type.project_group.yml
+++ b/config/sync/language/da/group.type.project_group.yml
@@ -1,2 +1,2 @@
-label: Screeninggruppe
-description: "A group that works on a screening."
+label: Projectgruppe
+description: "A group that works on a project."
