--- a/config/translations/config.da.po
+++ b/config/translations/config.da.po
@@ -195,7 +195,7 @@ msgid "d/m/Y"
 msgstr ""
 
 msgctxt "core.entity_form_display.node.project.default:third_party_settings:field_group:group_project_information:label"
-msgid "Screeningsinformation"
+msgid "Projektinformation"
 msgstr ""
 
 msgctxt "core.entity_form_display.node.project.default:third_party_settings:field_group:group_state:label"
@@ -271,7 +271,7 @@ msgid "Department"
 msgstr "Magistratsafdeling"
 
 msgctxt "field.field.node.project.field_department:description"
-msgid "Hvilke magistratsafdelinger screeningen hører under"
+msgid "Hvilke magistratsafdelinger projektet hører under"
 msgstr ""
 
 msgctxt "field.field.node.project.field_description:label"
@@ -279,8 +279,8 @@ msgid "Description"
 msgstr "Beskrivelse"
 
 msgctxt "field.field.node.project.field_project_state:label"
-msgid "Screening state"
-msgstr "Screeningstilstand"
+msgid "Project state"
+msgstr "Projekttilstand"
 
 msgctxt "field.field.node.static.field_text:label"
 msgid "Tekst"
@@ -371,11 +371,11 @@ msgid "Member"
 msgstr "Medlem"
 
 msgctxt "group.type.project_group:label"
-msgid "Screening group"
+msgid "Project group"
 msgstr ""
 
 msgctxt "group.type.project_group:description"
-msgid "A group that works on a screening."
+msgid "A group that works on a project."
 msgstr ""
 
 msgctxt "image.style.large:label"
@@ -427,7 +427,7 @@ msgid "User"
 msgstr ""
 
 msgctxt "node.type.project:name"
-msgid "Screening"
+msgid "Project"
 msgstr ""
 
 msgctxt "node.type.static:name"
@@ -615,11 +615,11 @@ msgid "Department"
 msgstr "Magistratsafdeling"
 
 msgctxt "taxonomy.vocabulary.project_track_type:name"
-msgid "Screening track type"
+msgid "Project track type"
 msgstr ""
 
 msgctxt "taxonomy.vocabulary.project_track_type:description"
-msgid "Screening tracks are used to group tools to represent a unified evaluation of part of a screening"
+msgid "Project tracks are used to group tools to represent a unified evaluation of part of a project"
 msgstr ""
 
 msgctxt "user.mail:cancel_confirm:subject"
@@ -1959,7 +1959,7 @@ msgid "Moderated content"
 msgstr ""
 
 msgctxt "views.view.projects:label"
-msgid "Screeninger"
+msgid "Projekter"
 msgstr ""
 
 msgctxt "views.view.projects:display:default:display_title"
@@ -1967,7 +1967,7 @@ msgid "Default"
 msgstr ""
 
 msgctxt "views.view.projects:display:default:display_options:title"
-msgid "Screeninger"
+msgid "Projekter"
 msgstr ""
 
 msgctxt "views.view.projects:display:default:display_options:fields:nid:label"
@@ -2019,8 +2019,8 @@ msgid "Department"
 msgstr "Magistratsafdeling"
 
 msgctxt "views.view.projects:display:default:display_options:fields:name:label"
-msgid "Screening owner"
-msgstr "Screeningsejer"
+msgid "Project owner"
+msgstr "Projektejer"
 
 msgctxt "views.view.projects:display:default:display_options:fields:created:label"
 msgid "Oprettet"
@@ -2087,7 +2087,7 @@ msgid "Search"
 msgstr "Søg"
 
 msgctxt "views.view.projects:display:default:display_options:filters:combine:expose:description"
-msgid "Filter on screening title, description or screening owner"
+msgid "Filter on project title, description or project owner"
 msgstr "Søg på navn, beskrivelse, ejer og bidragsyder"
 
 msgctxt "views.view.projects:display:default:display_options:filters:field_department_target_id:expose:label"
@@ -2115,7 +2115,7 @@ msgid "Page"
 msgstr "Side"
 
 msgctxt "views.view.projects:display:page_1:display_options:menu:title"
-msgid "Screeninger"
+msgid "Projekter"
 msgstr ""
 
 msgctxt "views.view.taxonomy_term:label"
@@ -3214,7 +3214,7 @@ msgid ""
 "    '#title': 'Har projektorganisationen erfaring med de involverede teknologier?'\n"
 "    '#options':\n"
 "      '10,0': 'Etablerede eksperter'\n"
-"      '7,0': 'Har gennemført screeninger med samme teknologi med ekstern bistand'\n"
+"      '7,0': 'Har gennemført projekter med samme teknologi med ekstern bistand'\n"
 "      '5,0': 'Har gennemført pilotforløb med teknologien'\n"
 "      '3,0': 'Har arbejdet med lignende teknologier'\n"
 "      '1,0': 'Ingen erfaring med teknologien'\n"
@@ -3236,8 +3236,8 @@ msgid ""
 "      '10,0': Ingen\n"
 "      '7,0': 'Mindre tilretninger af etablerede platforme'\n"
 "      '5,0': 'Større ændringer i etablerede platforme'\n"
-"      '3,0': 'Flere essentielle leverancer fra anden screening'\n"
-"      '1,0': 'Flere essentielle leverancer til/fra andre screeninger'\n"
+"      '3,0': 'Flere essentielle leverancer fra andet projekt'\n"
+"      '1,0': 'Flere essentielle leverancer til/fra andre projekter'\n"
 "    '#options__properties': ''\n"
 "usikkerhed:\n"
 "  '#type': webform_wizard_page\n"
@@ -3476,7 +3476,7 @@ msgid ""
 "    '#help': '<p>AI-løsninger bruger strøm, ikke mindst under træning, og vand til køling. Det er derfor vigtigt, at "
 "løsningernes ressourceforbrug står mål med de forventede udbytter, og at løsningerne i øvrigt er tilrettelagt ud fra en "
 "ressourceoptimerende tilgang (f.eks. krav til grøn strøm og genanvendelse af varmeudledning).</p><p>I svaret skal der redegøres "
-"for, om det er overvejet at anvende mindre ressourcekrævende løsinger end AI til indfrielse af screeningens formål.</p>'\n"
+"for, om det er overvejet at anvende mindre ressourcekrævende løsinger end AI til indfrielse af projektets formål.</p>'\n"
 "    '#help_display': element_before\n"
 "    '#allowed_formats':\n"
 "      simple_editor: simple_editor\n"
