--- a/web/modules/custom/ai_screening/translations/ai_screening.da.po
+++ b/web/modules/custom/ai_screening/translations/ai_screening.da.po
@@ -82,8 +82,8 @@ msgid "Unblocking OIDC user @user (@id)"
 msgstr "Ophæver blokering af OIDC-bruger @user (@id)"
 
 #: modules/custom/ai_screening/src/Helper/ThemeHelper.php:37
-msgid "Create new screening"
-msgstr "Opret ny screening"
+msgid "Create new project"
+msgstr "Opret nyt projekt"
 
 #: modules/custom/ai_screening/src/Helper/ThemeHelper.php:40
 msgid "Create new static page"
