--- a/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
+++ b/web/modules/custom/ai_screening_project/translations/ai_screening_project.da.po
@@ -25,81 +25,81 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: modules/custom/ai_screening_project/ai_screening_project.info.yml:0
-msgid "AI Screening project"
-msgstr "AI Screening-screening"
+msgid "AI Project project"
+msgstr "AI Project-screening"
 
 #: modules/custom/ai_screening_project/ai_screening_project.info.yml:0
 msgid "Functionality related to creating and maintaining the project content type and related entities."
 msgstr ""
 "Funktionalitet relateret til oprettelse og vedligehold af af "
-"screeningsindholdstype og relaterede entiteter."
+"projektindholdstype og relaterede entiteter."
 
 #: modules/custom/ai_screening_project/ai_screening_project.info.yml:0 modules/custom/ai_screening_project/src/Plugin/Block/FrontpageStatsTopBlock.php:21
 msgid "Custom"
 msgstr "Tilpasset"
 
 #: modules/custom/ai_screening_project/ai_screening_project.routing.yml:0
-msgid "Confirm Screening Changes"
-msgstr "Bekræft screeningsændringer"
+msgid "Confirm Project Changes"
+msgstr "Bekræft projektændringer"
 
 #: modules/custom/ai_screening_project/src/BreadcrumbBuilder.php:68
-msgid "Screenings"
-msgstr "Screeninger"
+msgid "Projects"
+msgstr "Projekter"
 
 #: modules/custom/ai_screening_project/src/BreadcrumbBuilder.php:71
-msgid "Create new screening"
-msgstr "Opret ny screening"
+msgid "Create new project"
+msgstr "Opret nyt projekt"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:64
-msgid "Are you sure you want to save the screening \"@title\"?"
-msgstr "Er du sikker på at du vil gemme screeningen \"@title\"?"
+msgid "Are you sure you want to save the project \"@title\"?"
+msgstr "Er du sikker på at du vil gemme projektet \"@title\"?"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:78
-msgid "Deactivating a screening will disable further work on the screening and archive it. Reactivation of the screening requires site administrative privileges."
+msgid "Deactivating a project will disable further work on the project and archive it. Reactivation of the project requires site administrative privileges."
 msgstr ""
-"Deaktivering af screeningen vil forhindre yderligere arbejde på "
-"screeningen og arkivere det. Reaktivering af screeningen kræver "
-"administrator adgang på sitet."
+"Deaktivering af projektet vil forhindre yderligere arbejde på "
+"projektet og arkivere det. Reaktivering af projektet kræver "
+"administratoradgang på sitet."
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:85
-msgid "Save screening"
-msgstr "Gem screening"
+msgid "Save project"
+msgstr "Gem projekt"
 
 #: modules/custom/ai_screening_project/src/Form/ProjectNodeConfirmForm.php:113
-msgid "Screening \"@title\" has been updated."
-msgstr "Screening \"@title\" er blevet opdateret."
+msgid "Project \"@title\" has been updated."
+msgstr "Project \"@title\" er blevet opdateret."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:240
 msgid "Corrupted"
 msgstr "Beskadiget"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:241
-msgid "If the screening or related entities are corrupted."
-msgstr "Hvis screeningen eller relaterede entiteter er beskadiget."
+msgid "If the project or related entities are corrupted."
+msgstr "Hvis projektet eller relaterede entiteter er beskadiget."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:358
-msgid "Screening group"
+msgid "Project group"
 msgstr "Projectgruppe"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:363
-msgid "Screening owner"
-msgstr "Screeningsejer"
+msgid "Project owner"
+msgstr "Projektejer"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:372
 msgid "Contributors"
 msgstr "Bidragydere"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:373
-msgid "Which users are allowed to contribute to this screening"
-msgstr "Hvilke brugere har tilladelse til at bidrage til denne screening"
+msgid "Which users are allowed to contribute to this project"
+msgstr "Hvilke brugere har tilladelse til at bidrage til dette projekt"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:400
-msgid "Screening owner must be a contributor."
-msgstr "Screeningsejeren skal være bidragyder."
+msgid "Project owner must be a contributor."
+msgstr "Projektejeren skal være bidragyder."
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:159
-msgid "Error deleting screening: @message"
-msgstr "Fejl ved sletning af screening: @message"
+msgid "Error deleting project: @message"
+msgstr "Fejl ved sletning af projekt: @message"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:182
 msgid "Error deleting corrupted nodes: @message"
@@ -110,18 +110,17 @@ msgid "Error creating groups: @message"
 msgstr "Fejl ved oprettelse af grupper: @message"
 
 #: modules/custom/ai_screening_project/src/Helper/ProjectHelper.php:576
-msgid "Error creating screening tracks: @message"
-msgstr "Fejl ved oprettelse af screeningsspor: @message"
+msgid "Error creating project tracks: @message"
+msgstr "Fejl ved oprettelse af projektspor: @message"
 
 #: modules/custom/ai_screening_project/src/Hook/FormHooks.php:24
 msgid "Public"
 msgstr "Tillad kiggeadgang"
 
 #: modules/custom/ai_screening_project/src/Hook/FormHooks.php:25
-msgid "Public screenings can be <em>viewed by all users</em>. Non-public screenings can be viewed by editors only."
+msgid "Public projects can be <em>viewed by all users</em>. Non-public projects can be viewed by editors only."
 msgstr "👀"
 
 #: modules/custom/ai_screening_project/src/Plugin/Block/FrontpageStatsTopBlock.php:20
 msgid "Frontpage stats top"
 msgstr "Forside statistik top"
-
