--- a/config/sync/language/da/taxonomy.vocabulary.project_track_type.yml
+++ b/config/sync/language/da/taxonomy.vocabulary.project_track_type.yml
@@ -1,2 +1,2 @@
-name: "Screeningsspor type"
-description: "Screening tracks are used to group tools to represent a unified evaluation of part of a screening"
+name: "Projektspor type"
+description: "Project tracks are used to group tools to represent a unified evaluation of part of a project"
