--- a/config/sync/language/da/views.view.projects.yml
+++ b/config/sync/language/da/views.view.projects.yml
@@ -1,9 +1,9 @@
-label: Screeninger
+label: Projekter
 display:
   default:
     display_title: Default
     display_options:
-      title: Screeninger
+      title: Projekter
       fields:
         nid:
           label: ID
@@ -28,7 +28,7 @@ display:
           label: Magistratsafdeling
           separator: ", "
         name:
-          label: Screeningsejer
+          label: Projektejer
           separator: ", "
       pager:
         options:
@@ -57,7 +57,7 @@ display:
         combine:
           expose:
             label: Søg
-            description: "Filtrér på screeningstitel, beskrivelse eller screeningsejer"
+            description: "Filtrér på projekttitel, beskrivelse eller projektejer"
         field_department_target_id:
           expose:
             label: Magistratsafdeling
@@ -76,4 +76,4 @@ display:
     display_title: Side
     display_options:
       menu:
-        title: Screeninger
+        title: Projekter
