--- a/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
@@ -22,11 +22,11 @@ msgstr ""
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "ITK-dev Project Theme"
-msgstr "ITK-dev Screeningstema"
+msgstr "ITK-dev Projectstema"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "Project theme"
-msgstr "Screeningstema"
+msgstr "Projekttema"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "itkdev"
@@ -65,22 +65,22 @@ msgid "Press to select"
 msgstr "Tryk for at vælge"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:18
-msgid "Screening that complies to all demands for use"
-msgid_plural "Screenings that comply to all demands for use"
-msgstr[0] "Screening der opfylder alle krav til brug"
-msgstr[1] "Screeninger der opfylder alle krav til brug"
+msgid "Project that complies to all demands for use"
+msgid_plural "Projects that comply to all demands for use"
+msgstr[0] "Project der opfylder alle krav til brug"
+msgstr[1] "Projekter der opfylder alle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:28
-msgid "Screening that complies to some demands for use"
-msgid_plural "Screenings that comply to some demands for use"
-msgstr[0] "Screening der opfylder nogle krav til brug"
-msgstr[1] "Screeninger der opfylder nogle krav til brug"
+msgid "Project that complies to some demands for use"
+msgid_plural "Projects that comply to some demands for use"
+msgstr[0] "Project der opfylder nogle krav til brug"
+msgstr[1] "Projekter der opfylder nogle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:38
-msgid "Screening that does not comply to the demands for use"
-msgid_plural "Screenings that do not comply to the demands for use"
-msgstr[0] "Screening der ikke opfylder kravene til brug"
-msgstr[1] "Screeninger der ikke opfylder kravene til brug"
+msgid "Project that does not comply to the demands for use"
+msgid_plural "Projects that do not comply to the demands for use"
+msgstr[0] "Project der ikke opfylder kravene til brug"
+msgstr[1] "Projekter der ikke opfylder kravene til brug"
 
 msgid "Department"
 msgstr "Magistratsafdeling"
